Fixes extra space in bg image of the contact me section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3323,6 +3323,13 @@ input, select, textarea {
 			background-repeat: no-repeat;
 		}
 
+			@media screen and (max-width: 520px) {
+				.wrapper.style1 {
+					/* background-color: #2e279d; */
+					background-size: auto 150%;
+				}
+			}
+
 		.wrapper.style1-alt {
 			/* background-color: #2e279d; */
 		}
